change folder test

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,6 +5,6 @@ sonar.projectName=nestjs-101
 sonar.projectVersion=0.1
 
 sonar.sources=src
-sonar.tests=**/__tests__/*
+sonar.tests=test
 
 sonar.sourceEncoding=UTF-8
