try genericcoverage, testExecutionReportPaths

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,3 +9,5 @@ sonar.tests=test
 
 sonar.sourceEncoding=UTF-8
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.genericcoverage.unitTestReportPaths=test-report.xml
+sonar.testExecutionReportPaths=test-report.xml
