--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,9 +5,10 @@ sonar.projectName=nestjs-101
 sonar.projectVersion=0.1
 
 sonar.sources=src
-sonar.tests=test
+# sonar.tests=test
 
 sonar.sourceEncoding=UTF-8
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.genericcoverage.unitTestReportPaths=test-report.xml
 sonar.testExecutionReportPaths=test-report.xml
+sonar.test.inclusions=*.spec.ts,*.e2e-spec.ts
