--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,3 +12,4 @@ sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.genericcoverage.unitTestReportPaths=test-report.xml
 sonar.testExecutionReportPaths=test-report.xml
 sonar.test.inclusions=*.spec.ts,*.e2e-spec.ts
+sonar.typescript.tsconfigPath=tsconfig.json
