--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,7 @@ jobs:
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
       - run: yarn install --frozen-lockfile
+      - run: yarn build
       - run: yarn test:cov
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
