--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,5 +11,5 @@ sonar.sourceEncoding=UTF-8
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.genericcoverage.unitTestReportPaths=test-report.xml
 sonar.testExecutionReportPaths=test-report.xml
-sonar.test.inclusions=*.spec.ts,*.e2e-spec.ts
+sonar.test.exclusions=*.spec.ts,*.e2e-spec.ts
 sonar.typescript.tsconfigPath=tsconfig.json
