--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,7 +5,7 @@ sonar.projectName=nestjs-101
 sonar.projectVersion=0.1
 
 sonar.sources=src
-# sonar.tests=test
+sonar.tests=test
 
 sonar.sourceEncoding=UTF-8
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
