--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,8 @@ sonar.tests=test
 
 sonar.sourceEncoding=UTF-8
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.genericcoverage.unitTestReportPaths=test-report.xml
-sonar.testExecutionReportPaths=test-report.xml
+# sonar.genericcoverage.unitTestReportPaths=test-report.xml
+# sonar.testExecutionReportPaths=test-report.xml
 sonar.test.exclusions=**/*.spec.ts,**/*.e2e-spec.ts
 sonar.typescript.tsconfigPath=tsconfig.json
+# sonar.coverage.exclusions=src/
