--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,4 +13,7 @@ sonar.javascript.lcov.reportPaths=coverage/lcov.info
 # sonar.testExecutionReportPaths=test-report.xml
 sonar.test.exclusions=**/*.spec.ts,**/*.e2e-spec.ts
 sonar.typescript.tsconfigPath=tsconfig.json
+
 # sonar.coverage.exclusions=src/
+
+sonar.coverage.exclusions=src/app.controller.spec.ts
