--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,8 @@
 {
+  "bracketSpacing": true,
   "singleQuote": true,
-  "trailingComma": "all"
+  "printWidth": 80,
+  "trailingComma": "all",
+  "arrowParens": "avoid",
+  "semi": false
 }
